Mobile: add Modules dropdown + improve column scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <!-- Header -->
         <header class="main-header">
             <div class="header-left">
+                <button class="mobile-modules-btn" id="mobile-modules-btn" aria-label="Modules">MODULES ▾</button>
                 <div class="logo">
                     <svg class="logo-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="currentColor"/>
@@ -219,6 +220,21 @@
                 <span class="footer-version">V1.0.2-RELEASE-STABLE</span>
             </div>
         </footer>
+    </div>
+
+    <!-- Mobile Modules Menu -->
+    <div class="mobile-modules-overlay" id="mobile-modules-overlay">
+        <div class="mobile-modules-menu">
+            <div class="mobile-modules-header">
+                <span>MODULES</span>
+                <button class="mobile-modules-close" id="mobile-modules-close" aria-label="Close">×</button>
+            </div>
+            <a class="mobile-modules-link" href="index.html">Dashboard</a>
+            <a class="mobile-modules-link" href="daily-news.html">Daily News</a>
+            <a class="mobile-modules-link" href="tactical-map.html">Tactical Map</a>
+            <a class="mobile-modules-link" href="neural-links.html">Neural Links</a>
+            <a class="mobile-modules-link" href="archive.html">Archive</a>
+        </div>
     </div>
 
     <!-- Modal -->
